# AI-ThreatDetector

./: README.md  pyproject.toml
backend/: .env  config.py  main.py  models.py  pcap_traffic.db
backend/app/: gpt_classifier.py
backend/database/: connection.py
backend/models/: packet_model.py  threat_model.py
backend/services/: pcap_processor.py  rl_anomaly_detector.py  threat_detection.py
backend/utils/: file_handler.py
frontend/: package-lock.json  package.json
frontend/services/: apiService.js
frontend/src/: App.js  index.js
frontend/src/components/: NetworkGraph.js  PacketTable.js  PcapUpload.js  ThreatDashboard.js
frontend/utils/: chartConfig.js
