[tool.poetry]
name = "ai-threatdetector"
version = "0.1.0"
description = ""
authors = ["apar2021"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pymongo = "^4.11.1"
motor = "^3.7.0"
kagglehub = {extras = ["pandas-datasets"], version = "^0.3.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
